--- a/lesson4-practice1/package.json
+++ b/lesson4-practice1/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reset-data": "node backup_data/reset_db.js"
+    "reset-data": "node backup_data/reset_db.js",
+    "start": "node db-server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql": "^2.18.1"
   }
