--- a/expense-tracker/next-app/package.json
+++ b/expense-tracker/next-app/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-currency-input-field": "^3.9.0",
     "react-dom": "^18.3.1",
-    "recharts": "^2.13.3",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
