--- a/expense-tracker/next-app/package.json
+++ b/expense-tracker/next-app/package.json
@@ -2,6 +2,7 @@
   "name": "next-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -21,6 +22,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
